src/objects/HELO_ARM_2__mdt.object
<CustomObject>
    <fields>
        <fullName>HELO_Credit_to_borrower__c</fullName>
        <label>HELO_Credit to borrower</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HELO_Origination_to_partner__c</fullName>
        <label>HELO_Origination to partner</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HELO_Rate__c</fullName>
        <label>HELO_Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HELO_Servicing_Fee__c</fullName>
        <label>HELO_Servicing Fee</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HeloArmMargin__c</fullName>
        <label>HeloArmMargin</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HeloPrice__c</fullName>
        <label>HeloPrice</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>HELO_ARM_2</label>
    <pluralLabel>HELO_ARM_2</pluralLabel>
</CustomObject>